SMC-785 - fixes for dept promo being hidden behind view more button on mobile

--- a/profile/themes/smc_base/css/smc_base.css
+++ b/profile/themes/smc_base/css/smc_base.css
@@ -9910,7 +9910,6 @@ body.page-node .node .action-links-field-collection-add {
 /* line 3, ../scss/elements/dept-promo.scss */
 .dept-promo {
   background-color: rgba(85, 90, 90, 0.05);
-  margin-top: -10%;
   margin-bottom: 0%; }
   /* line 8, ../scss/elements/dept-promo.scss */
   .dept-promo .dept-logo {
