--- a/profile/themes/smc_base/scss/elements/dept-promo.scss
+++ b/profile/themes/smc_base/scss/elements/dept-promo.scss
@@ -2,7 +2,7 @@
 // All default/mobile styles will appear before the following media queries.
 .dept-promo {
 	background-color: rgba($primaryGray, .05);
-	margin-top: -10%;
+	//margin-top: -10%;
 	margin-bottom: 0%;
 
 	.dept-logo {
