--- a/profile/themes/smc_main_frontend/css/smc_main.css
+++ b/profile/themes/smc_main_frontend/css/smc_main.css
@@ -9912,7 +9912,6 @@ body.page-node .node .action-links-field-collection-add {
 /* line 3, ../../smc_base/scss/elements/dept-promo.scss */
 .dept-promo {
   background-color: rgba(0, 0, 0, 0.05);
-  margin-top: -10%;
   margin-bottom: 0%; }
   /* line 8, ../../smc_base/scss/elements/dept-promo.scss */
   .dept-promo .dept-logo {
